created 4 cards and a style for them

--- a/index.html
+++ b/index.html
@@ -50,15 +50,62 @@
       <div class="conteiner">
         <ul class="game-list">
           <li>
-            <!-- Game Card -->
+            <!-- Game Card-Minecraft-->
             <article class="game">
-              <img src="/images/Minecraft.jpg" alt="Minecraft" class="game-img" />
+              <img
+                src="/images/Minecraft.jpg"
+                alt="Minecraft"
+                class="game-img"
+              />
               <div class="game-info">
                 <h3 class="game-title">Minecraft</h3>
-                <p class="game-text">Досліджуйте та будуйте безкінечні світи</p>
+                <p class="game-text">
+                  Досліджуйте та будуйте безкінечні світи!
+                </p>
               </div>
             </article>
-            <!-- /Game Card -->
+            <!-- /Game Card-Minecraft -->
+          </li>
+          <li>
+            <!-- Game Card-Among us -->
+            <article class="game">
+              <img src="/images/AmongUs.jpg" alt="AmongUs" class="game-img" />
+              <div class="game-info">
+                <h3 class="game-title">Among Us</h3>
+                <p class="game-text">
+                  Готуйте свій космічний корабель до вильоту!
+                </p>
+              </div>
+            </article>
+            <!-- /Game Card-Among us -->
+          </li>
+          <li>
+            <!-- Game Card-Need for speed -->
+            <article class="game">
+              <img src="/images/NFS.jpg" alt="NeedForSpeed" class="game-img" />
+              <div class="game-info">
+                <h3 class="game-title">Need for speed</h3>
+                <p class="game-text">
+                  Тюнінгуй авто і змагайся за призи у гонках.
+                </p>
+              </div>
+            </article>
+            <!-- /Game Card-Need for speed -->
+          </li>
+          <li>
+            <!-- Game Card-World of tanks-->
+            <article class="game">
+              <img
+                src="/images/WOT.jpg"
+                alt="World of tanks"
+                class="game-img"
+              />
+              <div class="game-info">
+                <h3 class="game-title">World of tanks</h3>
+                <p class="game-text">Занурся в атмосферу воєнних поєдинків.</p>
+              </div>
+            </article>
+            <!-- /Game Card-World of tanks -->
           </li>
         </ul>
       </div>
