--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <!-- Game Card-Minecraft-->
             <article class="game">
               <img
-                src="/images/Minecraft.jpg"
+                src="images/Minecraft.jpg"
                 alt="Minecraft"
                 class="game-img"
               />
@@ -69,7 +69,7 @@
           <li>
             <!-- Game Card-Among us -->
             <article class="game">
-              <img src="/images/AmongUs.jpg" alt="AmongUs" class="game-img" />
+              <img src="images/AmongUs.jpg" alt="AmongUs" class="game-img" />
               <div class="game-info">
                 <h3 class="game-title">Among Us</h3>
                 <p class="game-text">
@@ -82,7 +82,7 @@
           <li>
             <!-- Game Card-Need for speed -->
             <article class="game">
-              <img src="/images/NFS.jpg" alt="NeedForSpeed" class="game-img" />
+              <img src="images/NFS.jpg" alt="NeedForSpeed" class="game-img" />
               <div class="game-info">
                 <h3 class="game-title">Need for speed</h3>
                 <p class="game-text">
@@ -96,7 +96,7 @@
             <!-- Game Card-World of tanks-->
             <article class="game">
               <img
-                src="/images/WOT.jpg"
+                src="images/WOT.jpg"
                 alt="World of tanks"
                 class="game-img"
               />
