--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <body>
     <header>
       <nav>
-        <a href="project.html" class="logo">
+        <a href="/index.html" class="logo">
           <span class="logo-game">Game</span><span>Studio</span>
         </a>
       </nav>
